--- a/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "8D94Rao8Km8lHOTpQXM6wG",
+    "id" : "kdPVuUdEJsIgAmDCGaTusv",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01004J17000000000LHM"
+        "repoHandle" : "01004J17000000000LHX"
       },
       "contextAttributes" : [ {
         "name" : "id",
