--- a/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "jmOKZAsIPYndgb2rbQTfww",
+    "id" : "3gGQXyZcsESdpraQdpvMMb",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01004J17000000000LHN"
+        "repoHandle" : "01004J17000000000LHZ"
       },
       "contextAttributes" : [ {
         "name" : "id",
