--- a/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "2HIPJPgIEfikvXrljScNA5",
+    "id" : "937i76lkheTgyx9sOr4XIN",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01004J17000000000LHK"
+        "repoHandle" : "01004J17000000000LHY"
       },
       "contextAttributes" : [ {
         "name" : "id",
