--- a/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping_SQL_FF_1.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping_SQL_FF_1.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "496SU1gkZYdbDzbW1JREwZ",
+    "id" : "aMN50fJGjlYi5b3RZkiO49",
     "name" : "BulkUnlink_Mapping_SQL_FF_1",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01004J17000000000LHH"
+        "repoHandle" : "01004J17000000000LHT"
       },
       "contextAttributes" : [ {
         "name" : "id",
