Multi checkin assets
Description for Multi checkin assets

--- a/Explore/BulkUnlinkTestProj2/.BulkUnlinkTestProj2.Project.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlinkTestProj2.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "7JqSswFrgrGc4dNMsccRuY",
+    "id" : "6aZ9uW1iLujdP71U8lsxWY",
     "name" : "BulkUnlinkTestProj2",
     "type" : "Project",
     "metadata" : {
