Automation summary for Force Undo Checkout testsMzQ5MWQ3NGYtM2ZiZi00OD
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "0GJqnr3Ei4IfMWOHM3ymQ9",
+    "id" : "7d4sCtAtTO6kXwoFcarAof",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
