--- a/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "7qiNVoclF0PetSvN255Fk8",
+    "id" : "fEkqhrPxTarjz3MV2tAwkJ",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01026R170000000006N8"
+        "repoHandle" : "01026R170000000006NJ"
       },
       "contextAttributes" : [ {
         "name" : "id",
