Automation summary for Force Undo Checkout testsYmEzM2I4YWYtY2MzNi00Mz
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "7d4sCtAtTO6kXwoFcarAof",
+    "id" : "k2Z8gVfIVI3gfChIxz9Ew8",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
