Automation summary for Force Undo Checkout testsMmNlMjA3MTktODhjMy00N2
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "k2Z8gVfIVI3gfChIxz9Ew8",
+    "id" : "2Q01dEpZxBQhyVWy8HeCoR",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
