Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "kTtZ9DC0fU8hJ5ei5gwr8q",
+    "id" : "4E77gIHhQf8eCjKp3VTWE6",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
