Automation summary for Force Undo Checkout testsNGI0YjYxOTAtY2I3ZS00ZW
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "2Q01dEpZxBQhyVWy8HeCoR",
+    "id" : "fKXZXlmFTuKc2tVFMz7B2q",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
