--- a/Explore/BulkUnlinkTestProj2/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "deN4LoP2rY2jKYSRYp6zIh",
+    "id" : "dVB4xZ0Nd6icznbmkwWsyB",
     "name" : "BulkUnlink_LTF_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01026R170000000006ND"
+        "repoHandle" : "01001O17000000000OOB"
       },
       "contextAttributes" : [ {
         "name" : "id",
@@ -24,7 +24,7 @@
   },
   "dataFileExtension" : "zip",
   "objectRefs" : [ {
-    "id" : "cfOz7TkAfOae5dRiv9yJ4h",
+    "id" : "a0FDRjcza6gkXh5PNvsAKw",
     "name" : "FF_PodCertification",
     "type" : "Connection",
     "metadata" : {
@@ -33,11 +33,11 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01026R0B000000000003"
+        "repoHandle" : "01001O0B0000000009U3"
       },
       "contextAttributes" : null,
       "additionalInfo" : {
-        "description" : "Flat File connection for Pod Certification Automation",
+        "description" : null,
         "contentType" : "JSON",
         "documentState" : "COMPLETE"
       }
